array.island.Island.scala.error
Compilation error:
Island:6: error: type mismatch;
 found   : Unit
 required: Int
  while (compteur <= len) {
  ^Island:17: error: type mismatch;
 found   : Unit
 required: Int
  while (num(taille)<100) {
  ^Island:20: error: return outside method definition
};return longueur 
  ^